<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/other">
        <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_announcement_black_24dp"
                android:title="@string/nav_feedback"/>
        <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_todo_default_24dp"
                android:title="@string/nav_info"
        />
        <item
                android:id="@+id/nav_night"
                android:icon="@drawable/ic_night_24dp"
                android:title="@string/nav_night"
        />
        <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_setting_24dp"
                android:title="@string/nav_setting"
        />
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_white_24dp"
                android:title="@string/nav_logout"
        />
    </group>

</menu>