<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_recommend"
            android:enabled="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/ActionRecommend"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_navigation"
            android:enabled="true"
            android:icon="@drawable/ic_navigation_black_24dp"
            android:title="@string/ActionTrend"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_mine"
            android:enabled="true"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/ActionMine"
            app:showAsAction="ifRoom"/>

</menu>